/*
 * Copyright (c) 2024 TeamDev. All rights reserved.
 * TeamDev PROPRIETARY and CONFIDENTIAL.
 * Use is subject to license terms.
 */

syntax = "proto3";

package spine.chords.protodata.plugin;

import "spine/options.proto";
import "spine/protodata/file.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.chords.protodata.plugin";
option java_outer_classname = "FieldViewProto";
option java_multiple_files = true;

import "spine/protodata/ast.proto";

// View on the field's metadata.
message FieldMetadata {
    option (entity).kind = PROJECTION;

    // The ID of a FieldMetadata
    FieldMetadataId id = 1 [(required) = true];
}

// Identifies a field of a certain `Message` declared in a particular Proto file.
message FieldMetadataId {

    // The file where the message with the field is declared.
    spine.protodata.File file = 1 [(required) = true];

    // The type of the message where the field is declared.
    spine.protodata.TypeName type_name = 2 [(required) = true];

    // The field of the message.
    spine.protodata.Field field = 3 [(required) = true];
}
